--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restaurant-page",
   "version": "1.0.0",
   "description": "a simple restaurant home page",
-  "main": "index.js",
+  "main": "/src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
